kubernetes/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: grocery-app
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: grocery-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ibunceski/grocery-backend:latest
          ports:
            - containerPort: 8000
