kubernetes/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: grocery-app
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: grocery-app
spec:
  replicas: 3
  revisionHistoryLimit: 5
  minReadySeconds: 10
  progressDeadlineSeconds: 600
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ibunceski/grocery-frontend:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: env-config
              mountPath: /usr/share/nginx/html/env.js
              subPath: env.js
      volumes:
        - name: env-config
          configMap:
            name: frontend-env
